implemented form fields for control questions, need to complete submit button calling fcns and test

--- a/templates/RiskAndFairness_oTree/ControlQuestions.html
+++ b/templates/RiskAndFairness_oTree/ControlQuestions.html
@@ -34,14 +34,20 @@
 {% block scripts %}
     <script type="text/javascript">
 
+        var toggle = true
+
+        var list1 = ''
+        var list2 = ''
+        var attempts = 1
+
         var modemap = {
-            'probability': {you_a: 70.0, you_b: 10.0, partner_a: 10.0, partner_b: 80.0},
-            'sec_1bl_1ch': {you_a: 50.0, you_b: 16.7, partner_a: 50.0, partner_b: 16.7},
-            'sec_1bl_2ch': {you_a: 16.0, you_b: 68.0, partner_a: 43.0, partner_b: 14.0},
-            'sec_2bl_1ch': {you_a: 50.0, you_b: 16.7, partner_a: 16.7, partner_b: 50.0},
+            'probability': {you: 70.0, partner: 10.0},
+            'sec_1bl_1ch': {you: 50.0, partner: 50.0},
+            'sec_1bl_2ch': {you: 16.0, partner: 43.0},
+            'sec_2bl_1ch': {you: 50.0, partner: 16.7},
             'sec_ownrisk': {you_a: 40.0, you_b: 6.7},
-            'sec_ownrisk_fixedother': {you_a: 35.9, you_b: 9.4, partner_a: 10.0, partner_b: 20.0},
-            'sec_otherrisk_ownfixed': {you_a: 30.0, you_b: 13.3, partner_a: 35.5, partner_b: 7.3},
+            'sec_ownrisk_fixedother': {you_a: 35.9, partner: 10.0},
+            'sec_otherrisk_ownfixed': {you_a: 30.0, partner: 35.5},
             'det_giv': {you: 3.9, partner: 30.8}
         }
     
@@ -49,30 +55,27 @@
         {
             var q1 = document.getElementById('q1')
             var q2 = document.getElementById('q2')
+            var qc = document.getElementById('q_context')
 
             var mode = {{mode | json}}
 
             if (mode === 'sec_ownrisk')
             {
+                qc.innerHTML = "Suppose you have chosen what is shown in the picture above."
                 q1.innerHTML = "What is your payoff if state A is realized?"
                 q2.innerHTML = "What is your payoff if state B is realized?"
             }
             else if (mode === 'det_giv')
             {
+                qc.innerHTML = "Suppose you have chosen what is shown in the picture above."
                 q1.innerHTML = "What is your payoff?"
                 q2.innerHTML = "What is your patner's payoff?"       
             }
             else
             {
-                if (Math.random() < 0.5)
-                    q1.innerHTML = "What is your payoff if state A is realized?"
-                else
-                   q1.innerHTML = "What is your partner's payoff if state A is realized?"
-
-                if (Math.random() < 0.5)
-                    q2.innerHTML = "What is your payoff if state B is realized?"
-                else
-                    q2.innerHTML = "What is your partner's payoff if state B is realized?"
+                qc.innerHTML = "Suppose you have chosen what is shown in the picture above, and that state A was realized."
+                q1.innerHTML = "What is your payoff?"
+                q2.innerHTML = "What is your partner's payoff?"
             }
         }
 
@@ -83,7 +86,10 @@
             var a1 = parseFloat(document.getElementById('input1').value)
             var a2 = parseFloat(document.getElementById('input2').value)
 
-            var toggle = true
+            list1 += a1 + ','
+            list2 += a2 + ','
+
+            toggle = true
 
             if (mode === 'sec_ownrisk')
             {
@@ -91,12 +97,14 @@
                 {
                     var i1 = document.getElementById('incorrect1')
                     i1.innerHTML = "The correct answer is " + modemap.sec_ownrisk.you_a
+                    attempts++
                     toggle = false
                 }
                 if (a2 !== modemap.sec_ownrisk.you_b)
                 {
                     var i2 = document.getElementById('incorrect2')
                     i2.innerHTML = "The correct answer is " + modemap.sec_ownrisk.you_b
+                    attempts++
                     toggle = false
                 }
             }
@@ -106,61 +114,34 @@
                 {
                     var i1 = document.getElementById('incorrect1')
                     i1.innerHTML = "The correct answer is " + modemap.det_giv.you
+                    attempts++
                     toggle = false
                 }
                 if (a2 !== modemap.det_giv.partner)
                 {
-                    var i1 = document.getElementById('incorrect2')
-                    i1.innerHTML = "The correct answer is " + modemap.det_giv.partner
+                    var i2 = document.getElementById('incorrect2')
+                    i2.innerHTML = "The correct answer is " + modemap.det_giv.partner
+                    attempts++
                     toggle = false
                 }
             }
             else
             {
-                var q1 = document.getElementById('q1').innerHTML
-                var q2 = document.getElementById('q2').innerHTML
-
-                if (q1 === 'What is your payoff if state A is realized?')
+                if (a1 !== modemap[mode].you)
                 {
-                    if (a1 !== modemap[mode].you_a)
-                    {
-                        var i1 = document.getElementById('incorrect1')
-                        i1.innerHTML = "The correct answer is " + modemap[mode].you_a
-                        toggle = false
-                    }
+                    var i1 = document.getElementById('incorrect1')
+                    i1.innerHTML = "The correct answer is " + modemap[mode].you
+                    attempts++
+                    toggle = false
                 }
-                else // "What is your partner's payoff if state A is realized?"
+                if (a2 !== modemap[mode].partner)
                 {
-                    if (a1 !== modemap[mode].partner_a)
-                    {
-                        var i1 = document.getElementById('incorrect1')
-                        i1.innerHTML = "The correct answer is " + modemap[mode].partner_a
-                        toggle = false
-                    }
-                }
-
-                if (q2 === 'What is your payoff if state B is realized?')
-                {
-                    if (a2 !== modemap[mode].you_b)
-                    {
-                        var i2 = document.getElementById('incorrect2')
-                        i2.innerHTML = "The correct answer is " + modemap[mode].you_b
-                        toggle = false
-                    }
-                }
-                else // "What is your partner's payoff if state B is realized?"
-                {
-                    if (a2 !== modemap[mode].partner_b)
-                    {
-                        var i2 = document.getElementById('incorrect2')
-                        i2.innerHTML = "The correct answer is " + modemap[mode].partner_b
-                        toggle = false
-                    }
+                    var i2 = document.getElementById('incorrect2')
+                    i2.innerHTML = "The correct answer is " + modemap[mode].partner
+                    attempts++
+                    toggle = false
                 }
             }
-            return toggle
-
-            //add the next button, add the thing with returning the form 
         }
 
         window.onload = function() 
@@ -173,6 +154,8 @@
 
 {% block content %}
     {% formfield player.time_ControlQuestions label=None %}
+    {% formfield player.cq_attempts label=None %}
+    {% formfield player.cq_list label=None %}
 
     <div>
         <h4>
@@ -181,7 +164,7 @@
     </div>
     <div>
         {% if mode == 'probability' %}
-            <img src="{% static 'probability.png' %}" width="700">       
+            <img src="{% static 'probability.png' %}" width="700">   
         {% elif mode == 'sec_1bl_1ch' %}
             <img src="{% static 'sec_1bl_1ch_1.png' %}" width="700">
         {% elif mode == 'sec_2bl_1ch' %}
@@ -200,6 +183,7 @@
     </div>
     <hr>
     <div>
+        <p id="q_context"></p>
         <p id="q1"></p>
         <p id="incorrect1"></p>
         <input id="input1">
@@ -221,9 +205,19 @@
     <script type="text/javascript">
     $(document).ready(function() 
     {
-        $('.next-button').click(function() 
+        $('.next-button').click(function()  //add something for check_answers()
         {
-           return false
+            if (toggle === false)
+            {
+                return false
+            }
+            else
+            {
+                document.getElementById('attempts').value = attempts
+                document.getElementById('list1').value = list1
+                document.getElementById('list2').value = list2
+                return true
+            }
         })
     })
     </script>
