--- a/templates/RiskAndFairness_oTree/trial_period.html
+++ b/templates/RiskAndFairness_oTree/trial_period.html
@@ -70,7 +70,7 @@
         'det_giv': 'single_given'
     }
 
-    //unnecessary but I want to leave as much of trial_period.js unchanged from graph.js as possible
+    // can I remove this?
     var somethingChanged = false
 
     var currentRound = {{ player.round_number | json }}
