updates to handle otree 2.0

--- a/templates/RiskAndFairness_oTree/InitialInstructions.html
+++ b/templates/RiskAndFairness_oTree/InitialInstructions.html
@@ -20,7 +20,7 @@
     Principal maintainer: Eli Pandolfo <epandolf@ucsc.edu>
     Contributor: Kristian Lopez Vargas <kristianlvargas@gmail.com>
 -->
-    {% formfield player.time_InitialInstructions label=None %}
+    <input type="hidden" name="time_InitialInstructions" id="arrive_time"/>
 
     <h3>General Instructions</h3>
 
