--- a/templates/RiskAndFairness_oTree/TaskInstructions.html
+++ b/templates/RiskAndFairness_oTree/TaskInstructions.html
@@ -16,7 +16,7 @@
     Principal maintainer: Eli Pandolfo <epandolf@ucsc.edu>
     Contributor: Kristian Lopez Vargas <kristianlvargas@gmail.com>
 -->
-    {% formfield player.time_TaskInstructions label=None %}
+    <input type="hidden" name="time_TaskInstructions" id="arrive_time"/>
     
     {% if mode == 'probability' %}
         {% include Constants.instructions_probability %}
