--- a/templates/RiskAndFairness_oTree/Task.html
+++ b/templates/RiskAndFairness_oTree/Task.html
@@ -248,7 +248,7 @@
             <div class="row">
                 <div class="graph col-md-8"></div>
                 <div class="col-md-4" v-if="mode === 'probability'">
-                    <h5>This is your choice:</h5>
+                    <h5>Choose with the slider:</h5>
                     <div class="row" style="margin-top: 50px">
                         <range-slider
                         class="slider"
@@ -275,25 +275,25 @@
                         </div>
                     </div>
                     
-                    <div class="row col-md-6" style="margin-top: 50px">
+                    <div class="row" style="margin-top: 50px">
                         <table class="table table-bordered table-sm mdall">
                             <thead>
                                 <tr>
-                                    <td width="34%" style = "text-align: left;">Outcome Probability</td>
-                                    <td width="33%" style = "text-align: center;" ><b style="color: blue">Your Tokens<b></td>
-                                    <td width="33%" style = "text-align: center;" ><b style="color: orange">Partner's Tokens<b></td>
+                                    <td width="34%" style="text-align: center;">Outcome Probability</td>
+                                    <td width="33%" style="text-align: center; color: blue;"><b>Your Tokens</b></td>
+                                    <td width="33%" style="text-align: center; color: orange;"><b>Partner's Tokens</b></td>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td style = "text-align: center;" v-html="'A: ' + prob.a.toFixed(0) + '%'"></td>
-                                    <td style = "text-align: center; color: blue" v-html="equation.a.x"></td>
-                                    <td style = "text-align: center; color: orange" v-html="equation.a.y"></td>
+                                    <td style = "text-align: center; color: blue;" v-html="equation.a.x"></td>
+                                    <td style = "text-align: center; color: orange;" v-html="equation.a.y"></td>
                                 </tr>
                                 <tr>
                                     <td style = "text-align: center;" v-html="'B: ' + prob.b.toFixed(0) + '%'"></td>
-                                    <td style = "text-align: center; color: blue" v-html="equation.b.x"></td>
-                                    <td style = "text-align: center; color: orange" v-html="equation.b.y"></td>
+                                    <td style = "text-align: center; color: blue;" v-html="equation.b.x"></td>
+                                    <td style = "text-align: center; color: orange;" v-html="equation.b.y"></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -301,12 +301,12 @@
                 </div>
                 <div class="col-md-4" v-if="mode === 'single_given'">
                     <h5>This is your choice:</h5>
-                    <div class="row col-9" style="margin-top: 50px">
+                    <div class="row col-12" style="margin-top: 50px">
                         <table class="table table-bordered table-sm mdall">
                             <thead>
                                 <tr>
-                                    <td width="50%">Your Tokens</td>
-                                    <td width="50%" v-if="mode !== 'single'"><b style="color: orange">Partner's Tokens<b></td>
+                                    <td width="50%" style="color: blue;"><b>Your Tokens</b></td>
+                                    <td width="50%" v-if="mode !== 'single'" style="color: orange;"><b>Partner's Tokens</b></td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -324,9 +324,9 @@
                         <table class="table table-bordered table-sm mdall">
                             <thead>
                                 <tr>
-                                    <td width="34%" style = "text-align: left;"> State: Probability</td>
-                                    <td width="33%" style = "text-align: center; color: blue">Your Tokens</td>
-                                    <td width="33%" style = "text-align: center; color: orange" v-if="mode !== 'single'">Partner's Tokens</td>
+                                    <td width="34%" style = "text-align: center;">State: Probability</td>
+                                    <td width="33%" style = "text-align: center; color: blue"><b>Your Tokens</b></td>
+                                    <td width="33%" style = "text-align: center; color: orange" v-if="mode !== 'single'"><b>Partner's Tokens</b></td>
                                 </tr>
                             </thead>
                             <tbody>
