--- a/templates/RiskAndFairness_oTree/trial_period.html
+++ b/templates/RiskAndFairness_oTree/trial_period.html
@@ -309,8 +309,8 @@
             <div class="row">
                 <div class="graph col-9"></div>
                 <div class="col-3" v-if="mode === 'probability'">
-                    <h5>This is your choice:</h5>
-                    <div class="row" style="margin-top: 50px">
+                    <h5>Choose with the slider:</h5>
+                    <div class="row" style="margin-top: 30px">
                         <range-slider
                         class="slider"
                         min="0"
@@ -340,9 +340,9 @@
                         <table class="table table-bordered table-sm small">
                             <thead>
                                 <tr>
-                                    <td width="34%" style = "text-align: left;">Outcome Probability</td>
-                                    <td width="33%" style = "text-align: center;"><b style="color: blue">Your Tokens<b></td>
-                                    <td width="33%" style = "text-align: center;"><b style="color: orange">Partner's Tokens<b></td>
+                                    <td width="34%" style = "text-align: center;">Outcome Probability</td>
+                                    <td width="33%" style = "text-align: center; color: blue"><b>Your Tokens</b></td>
+                                    <td width="33%" style = "text-align: center; color: orange"><b>Partner's Tokens</b></td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -364,7 +364,7 @@
                         <table class="table table-bordered table-sm small">
                             <thead>
                                 <tr>
-                                    <td width="34%" style = "text-align: left;">Realized Outcome</td>
+                                    <td width="34%" style = "text-align: center;">Realized Outcome</td>
                                     <td width="33%" style = "text-align: center; color: blue"><b>Your Payoff</b></td>
                                     <td width="33%" style = "text-align: center; color: orange" v-if="mode !== 'single'"><b>Partner's Payoff</b></td>
                                 </tr>
@@ -385,8 +385,8 @@
                         <table class="table table-bordered table-sm small">
                             <thead>
                                 <tr>
-                                    <td width="50%">Your Tokens</td>
-                                    <td width="50%" v-if="mode !== 'single'" style="color: orange; text-align: center;">Partner's Tokens</td>
+                                    <td width="50%" style="color: blue; text-align: center;"><b>Your Tokens</b></td>
+                                    <td width="50%" v-if="mode !== 'single'" style="color: orange; text-align: center;"><b>Partner's Tokens</b></td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -421,9 +421,9 @@
                         <table class="table table-bordered table-sm small">
                             <thead>
                                 <tr>
-                                    <td width="34%" style = "text-align: left;">State: Probability</td>
-                                    <td width="33%" style = "text-align: center; color: blue">Your Tokens</td>
-                                    <td width="33%" style = "text-align: center; color: orange" v-if="mode !== 'single'">Partner's Tokens</td>
+                                    <td width="34%" style = "text-align: center;">State: Probability</td>
+                                    <td width="33%" style = "text-align: center; color: blue"><b>Your Tokens</b></td>
+                                    <td width="33%" style = "text-align: center; color: orange" v-if="mode !== 'single'"><b>Partner's Tokens</b></td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -445,7 +445,7 @@
                         <table class="table table-bordered table-sm small">
                             <thead>
                                 <tr>
-                                    <td width="34%" style = "text-align: left;">Realized Outcome</td>
+                                    <td width="34%" style = "text-align: center;">Realized Outcome</td>
                                     <td width="33%" style = "text-align: center; color: blue"><b>Your Payoff</b></td>
                                     <td width="33%" style = "text-align: center; color: orange" v-if="mode !== 'single'"><b>Partner's Payoff</b></td>
                                 </tr>
